--- a/_posts/2020-06-13-Test-Post.md
+++ b/_posts/2020-06-13-Test-Post.md
@@ -2,6 +2,9 @@
 layout: single  
 title: "Test Post"  
 ---  
+{% if page.comments == true %}
+  {% include comments.html %}
+{% endif %}
 
 This is a test to see how my posts will look like.
 
