--- a/_posts/2020-06-13-Test-Post.md
+++ b/_posts/2020-06-13-Test-Post.md
@@ -1,6 +1,10 @@
 ---  
 layout: single  
-title: "Test Post"  
+title: "Test Post"
+categories: Test
+tags:
+  - Jekyll
+  - Blog  
 ---  
 
 This is a test to see how my posts will look like.
